API variables changed from body to params
